Sat Apr  9 01:41:02 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Logger/Logger_Service.cpp:

          Add command line option for backend selection.

Thu Apr  7 22:06:23 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/DAnCE_Logging.txt:

          Documentation of logging service.

Thu Apr  7 12:45:08 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * dance/Plan_Launcher/Plan_Launcher.cpp:

          Improved error handling.

Wed Apr  6 18:32:27 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Logger/Logger_Service.cpp:

          wchar fix.

Wed Apr  6 18:03:40 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Logger/Logger_Service.cpp:

          Fixed a bug whereby the default condition (stderr) would cause failures.

Wed Apr  6 12:53:57 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Logger/Logger_Service.h:
        * dance/Logger/Logger_Service.cpp:
        * tools/Logger_Backend/ndds/Log_Backend.cpp:
        * tools/Logger_Backend/ndds/Log_Record.idl:
        * tools/Logger_Backend/ndds/USER_QOS_PROFILES.xml:

         Deleted trailing whitespace.

Wed Apr  6 01:17:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance_deployment_stub.mpb:

          Link in the logger, as it's used by some files in this project.

        * dance/ExecutionManager/Execution_Manager.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * dance/NodeManager/Node_Manager.cpp:
        * dance/Plan_Launcher/Plan_Launcher.cpp:

          Initialize the ORB before the logger, so dynamic services from
          svc.conf are available to the logger.

        * dance/Logger/Logger_Service.h:
        * dance/Logger/Logger_Service.cpp:

          Log backends can now be loaded from dynamic services from svc.conf.