@@ -1,3 +1,14 @@
+Sat Apr  9 01:41:40 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * dance/DomainApplication/Domain_Application_Impl.cpp:
+
+          Improved error handling.
+
+        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
+
+          Remove logic that installed error handler interceptors outside of
+          a localityconfig file.
+
 Sat Apr  9 01:41:02 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * dance/Logger/Logger_Service.cpp:
